<resources>
    <string name="app_name">MedCarApp</string>

    <!--Button Text-->
    <string name="autonomousDrivingOnButtonText">Auto-on</string>
    <string name="autonomousDrivingOffButtonText">Auto-off</string>
    <string name="startingAutonomousButtonText">AUTO</string>
    <string name="connectButtonText">Connect</string>

    <!--Toast Popups-->
    <string name="selectMedcarMessage">You clicked on Medcar </string>
    <string name="connectButtonDisabledMessage">Button disabled select a car</string>
    <string name="disconnectFromCarMessage">Disconnected from car.</string>
    <string name="connectedToMQTTBrokerMessage">Connected to MQTT broker</string>
    <string name="failedToConnectToMQTTBrokerMessage">Failed to connect to MQTT broker</string>
    <string name="connectionToMQTTBrokerLostMessage">Connection to MQTT broker lost</string>
    <string name="obstacleDetectedMessage">Obstacle detected</string>
    <string name="restrictBackButton">Restart the app and car to change server</string>

    <!--Car speed and angle information-->
    <string name="percentageSymbol">%</string>
    <string name="degreeSymbol">°</string>
    <string name="speedIndicator">Speed:</string>
    <string name="initialSpeedIndicatorValue">0%</string>
    <string name="angleIndicator">Angle:</string>
    <string name="initialAngleIndicatorValue">90°</string>

    <!--Credits text-->
    <string name="creditsTitle">Credits</string>
    <string name="creditsTextSmartcar_shield">Library: smartcar_shield</string>
    <string name="creditsTextCopyrightDimitris">Copyright: Dimitris Platis 2019</string>
    <string name="creditsTextLicenseMIT">License: MIT</string>
    <string name="creditsTextJoystick">Library: virtual-joystick-android</string>
    <string name="creditsTextCopyrightDamien">Copyright: Damien Brun 2016</string>
    <string name="creditsTextLicenseApache">License: Apache 2:0</string>

    <!--Connection indicators-->
    <string name="connectedIndicator">Connected</string>
    <string name="disconnectedIndicator">Disconnected</string>

    <!--User choice instructions-->
    <string name="chooseCarFromListInstruction">Choose a car from the list below</string>
    <string name="chooseServerText">Choose a server from the list below</string>

    <!--Rows text-->
    <string name="rowsTitle">Title</string>
    <string name="rowsDescription">Description</string>

    <!--Intent putExtra Keys-->
    <string name="switchServer">Switch server</string>
    <string name="restrictBack">Restrict back</string>

    <!--Main Activity Recyclerview Car Names-->
    <string-array name="carNames">
        <item>Medcar 1</item>
        <item>Medcar 2</item>
        <item>Medcar 3</item>
        <item>Medcar 4</item>
    </string-array>

    <!--Main Activity Recyclerview Car Description-->
    <string-array name="description">
        <item>This is the medical car 1.</item>
        <item>This is the medical car 2.</item>
        <item>This is the medical car 3.</item>
        <item>This is the medical car 4.</item>
    </string-array>

    <!--Server Selection Recyclerview Server Options-->
    <string-array name="serverOption">
        <item>Offline mode</item>
        <item>Online mode</item>
    </string-array>

    <!--Server Selection Recyclerview Server Description-->
    <string-array name="serverDescription">
        <item>Use within the same department</item>
        <item>Use from a different department</item>
    </string-array>
</resources>