...
            android:id="@+id/constraintrv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E7F1F0">

            <ImageView
                android:id="@+id/carLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher" />
...
