...
            android:id="@+id/constraintRV2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E7F1F0">

            <ImageView
                android:id="@+id/serverPic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/serverNames"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/rowsTitle"
...
