...
    android:layout_gravity="center"
    android:background="@color/greenblue"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
...
